Fix favorite button alignment

--- a/public_html/wp-content/themes/wporg-pattern-directory-2024/src/blocks/favorite-button/style.scss
+++ b/public_html/wp-content/themes/wporg-pattern-directory-2024/src/blocks/favorite-button/style.scss
@@ -16,7 +16,7 @@
 	> * {
 
 		/* Align children. */
-		display: flex;
+		display: flex !important;
 		align-items: center;
 		gap: calc(var(--wp--preset--spacing--10) / 2);
 	}
